Little fix